--- a/OAPI/DTI/2. OAPI DTI 개발가이드.md
+++ b/OAPI/DTI/2. OAPI DTI 개발가이드.md
@@ -72,12 +72,13 @@ curl -X POST -H 'Content-Type: application/json' http://demoapi.smartbill.co.kr/
 "ReceiveComRegno":"1000000005",     
 "Signal":"ARISSUE",     
 "ServiceCode":"DTI",     "AuthToken":"TSRKZUi1NHdrNmVquktoVndkU0VIFGQ1WUp1eDZ5VzYvbEVveEI6SngwZDhTNlX0R2FIU2ZoWElvNUVqV21mUbo=",     
-"SignedXML":"<?xml version=\"1.0\" encoding=\"UTF-8\"?>......<\/TaxInvoice>",     "SMTPEmail":"",     
+"SignedXML":"<?xml version=\"1.0\" encoding=\"UTF-8\"?>......<\/TaxInvoice>",     
+"SMTPEmail":"",     
 "MessageId":"sbqa-20201120032603"
 }'
 ```
 
-json문법에서 "가 쓰이고, 파라미터 중 SignedXML의 값인 xml문법에서도 "가 쓰이기 때문에 curl문법에서 '를 사용하고 json문법에서 "를 xml문법에서 \"를 사용하도록 한다.
+json문법에서 "가 쓰이고, 파라미터 중 SignedXML의 값인 xml문법에서도 "가 쓰이기 때문에 curl문법에서 '를 사용하고 json문법에서 "를 xml문법에서 \\"를 사용하도록 한다.
 
 
 
