--- a/OAPI/DTI/4. OAPI DTI 기술참조.md
+++ b/OAPI/DTI/4. OAPI DTI 기술참조.md
@@ -12,16 +12,18 @@ API 요청 시 필요한 URL, HOST, METHOD를 제공합니다.
 
 모든 HTTP요청의 경우 필요 시 SSL(Secure Sockets Layer) 환경의 HTTPS를 이용 가능 합니다. 홈페이지에서 발급 받은 인증코드를 사용해서 인증토큰을 발급받을 수 있고, 발급받은 인증토큰을 사용해서 다른 API 요청이 가능 합니다.
 
-| URL             | HOST                            | METHOD | 비고      |
-| --------------- | ------------------------------- | ------ | --------- |
-| /sb-api/request | http://demoapi.smartbill.co.kr  | POST   | http요청  |
-| /sb-api/request | https://demoapi.smartbill.co.kr | POST   | https요청 |
+| URL             | HOST                                   | METHOD | 비고      |
+| --------------- | -------------------------------------- | ------ | --------- |
+| /sb-api/request | 데모 : http://demoapi.smartbill.co.kr  | POST   | http요청  |
+|                 | 운영 : http://api.smartbill.co.kr      |        |           |
+| /sb-api/request | 데모 : https://demoapi.smartbill.co.kr | POST   | https요청 |
+|                 | 운영 ; https://api.smartbill.co.kr     |        |           |
 
 ‌
 
 # **응답 코드**
 
-응답 코드는 요청에 대한 상태를 나타내는 HTTP의 상태 코드(Status code)와 응답에 대한 정보를 담은 처리 코드(ResultCode), 처리 메시지(ResultMessage)가 있습니다. 요청이 성공하였을 경우 상태 코드 200, 처리 코드 30000과 함께 요청에 대한 처리 결과(ResultDataSet)가 반환되고, 요청이 실패하였을 경우 오류에 대한 정보를 담은 처리 코드와 처리 메시지(ResultMessage)가 리턴 됩니다.‌
+응답 코드는 요청에 대한 상태를 나타내는 HTTP의 상태 코드(Status code)와 응답에 대한 정보를 담은 처리 코드(ResultCode), 처리 메시지(ResultMessage)가 있습니다. 요청이 성공하였을 경우 상태 코드 200, 처리 코드 30000과 함께 요청에 대한 처리 결과(ResultDataSet)가 반환되고, 요청이 실패하였을 경우 오류에 대한 정보를 담은 처리 코드(ResultCode)와 처리 메시지(ResultMessage)가 리턴 됩니다.‌
 
 ## **HTTP 상태 코드**
 
