--- a/OAPI/DTI/1. OAPI DTI 사전절차.md
+++ b/OAPI/DTI/1. OAPI DTI 사전절차.md
@@ -105,7 +105,7 @@
 
 ![img](https://blog.kakaocdn.net/dn/bSZC7G/btqNkeKMuhU/G3PsDCstbCIkWCnqIrGkZ0/img.png)
 
-공인인증서의 공개키(signCert.der), 개인키(signPri.key) 파일을 직접 등록해야 하며 인증기관에서 인증서를 사용자 PC의 로컬디스크(C:)에 저장할 경우 기본적으로 아래 두 경로 중 하나에 자동으로 저장
+공인인증서의 공개키(signCert.der), 개인키(signPri.key) 파일을 직접 등록해야 하며 인증기관에서 인증서를 사용자 PC의 로컬디스크(C:)에 저장할 경우 기본적으로 아래 두 경로 중 하나에 자동으로 저장되며 폴더안에 있는 공개키, 개인키 파일을 등록해 주시면 됩니다.
 
 C:\Program Files\NPKI\인증기관명\USER\‌
 
